--- a/po/ca.po
+++ b/po/ca.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pavucontrol\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-10 02:55+0200\n"
+"POT-Creation-Date: 2009-06-17 03:51+0200\n"
 "PO-Revision-Date: 2009-03-19 21:04+0100\n"
 "Last-Translator: Agustí Grau <fletxa@gmail.com>\n"
 "Language-Team: Catalan <fedora@softcatala.net>\n"
@@ -250,75 +250,110 @@ msgstr "Ha fallat pa_context_get_sink_input_info_list()"
 msgid "pa_context_get_source_output_info_list() failed"
 msgstr "Ha fallat pa_context_get_source_output_info_list()"
 
-#: ../src/pavucontrol.cc:437 ../src/pavucontrol.cc:485
+#: ../src/pavucontrol.cc:437
 msgid "Connection failed"
 msgstr "Ha fallat la connexió"
 
-#~ msgid "Volume Control Feedback Sound"
-#~ msgstr "Control del volum de la realimentació del so"
+#: ../src/cardwidget.cc:87
+msgid "pa_context_set_card_profile_by_index() failed"
+msgstr "Ha fallat pa_context_set_card_profile_by_index()"
 
-#~ msgid "pa_context_set_card_profile_by_index() failed"
-#~ msgstr "Ha fallat pa_context_set_card_profile_by_index()"
+#: ../src/channelwidget.cc:99
+msgid "Volume Control Feedback Sound"
+msgstr "Control del volum de la realimentació del so"
 
-#~ msgid "pa_context_set_sink_volume_by_index() failed"
-#~ msgstr "Ha fallat pa_context_set_sink_volume_by_index()"
+#: ../src/channelwidget.cc:120
+msgid "<small>Silence</small>"
+msgstr ""
 
-#~ msgid "pa_context_set_sink_mute_by_index() failed"
-#~ msgstr "Ha fallat pa_context_set_sink_mute_by_index()"
+#: ../src/channelwidget.cc:121
+msgid "<small>Max</small>"
+msgstr ""
 
-#~ msgid "pa_context_set_default_sink() failed"
-#~ msgstr "Ha fallat pa_context_set_default_sink()"
+#: ../src/channelwidget.cc:125
+msgid "<small><i>Base</i></small>"
+msgstr ""
 
-#~ msgid "_Default"
-#~ msgstr "Per _defecte"
+#: ../src/mainwindow.cc:238
+msgid "Failed to read data from stream"
+msgstr "Ha fallat la lectura del fluxe"
 
-#~ msgid "pa_context_set_source_volume_by_index() failed"
-#~ msgstr "Ha fallat pa_context_set_source_volume_by_index()"
+#: ../src/mainwindow.cc:273 ../src/mainwindow.cc:310
+msgid "Peak detect"
+msgstr "Detecta els pics"
 
-#~ msgid "pa_context_set_source_mute_by_index() failed"
-#~ msgstr "Ha fallat pa_context_set_source_mute_by_index()"
+#: ../src/mainwindow.cc:274 ../src/mainwindow.cc:311
+msgid "Failed to create monitoring stream"
+msgstr "Ha fallat la creació del fluxe de monitorització"
 
-#~ msgid "pa_context_set_default_source() failed"
-#~ msgstr "Ha fallat pa_context_set_default_source()"
+#: ../src/mainwindow.cc:282 ../src/mainwindow.cc:320
+msgid "Failed to connect monitoring stream"
+msgstr "Ha fallat la connexió al fluxe de monitorització"
 
-#~ msgid "_Move Stream..."
-#~ msgstr "_Mou el fluxe..."
+#: ../src/mainwindow.cc:566
+msgid "System Sounds"
+msgstr "Sons del sistema"
 
-#~ msgid "_Terminate Stream"
-#~ msgstr "Finali_tza el fluxe"
+#: ../src/rolewidget.cc:66
+msgid "pa_ext_stream_restore_write() failed"
+msgstr "Ha fallat pa_ext_stream_restore_write()"
 
-#~ msgid "pa_context_set_sink_input_volume() failed"
-#~ msgstr "Ha fallat pa_context_set_sink_input_volume()"
+#: ../src/sinkinputwidget.cc:34 ../src/sourceoutputwidget.cc:34
+msgid "_Move Stream..."
+msgstr "_Mou el fluxe..."
 
-#~ msgid "pa_context_set_sink_input_mute() failed"
-#~ msgstr "Ha fallat pa_context_set_sink_input_mute()"
+#: ../src/sinkinputwidget.cc:35 ../src/sourceoutputwidget.cc:35
+msgid "_Terminate Stream"
+msgstr "Finali_tza el fluxe"
 
-#~ msgid "pa_context_kill_sink_input() failed"
-#~ msgstr "Ha fallat pa_context_kill_sink_input()"
+#: ../src/sinkinputwidget.cc:61
+msgid "pa_context_set_sink_input_volume() failed"
+msgstr "Ha fallat pa_context_set_sink_input_volume()"
 
-#~ msgid "pa_context_move_sink_input_by_index() failed"
-#~ msgstr "Ha fallat pa_context_move_sink_input_by_index()"
+#: ../src/sinkinputwidget.cc:76
+msgid "pa_context_set_sink_input_mute() failed"
+msgstr "Ha fallat pa_context_set_sink_input_mute()"
 
-#~ msgid "pa_context_kill_source_output() failed"
-#~ msgstr "Ha fallat pa_context_kill_source_output()"
+#: ../src/sinkinputwidget.cc:110
+msgid "pa_context_kill_sink_input() failed"
+msgstr "Ha fallat pa_context_kill_sink_input()"
 
-#~ msgid "pa_context_move_source_output_by_index() failed"
-#~ msgstr "Ha fallat pa_context_move_source_output_by_index()"
+#: ../src/sinkinputwidget.cc:127
+msgid "pa_context_move_sink_input_by_index() failed"
+msgstr "Ha fallat pa_context_move_sink_input_by_index()"
 
-#~ msgid "pa_ext_stream_restore_write() failed"
-#~ msgstr "Ha fallat pa_ext_stream_restore_write()"
+#: ../src/sinkwidget.cc:52
+msgid "pa_context_set_sink_volume_by_index() failed"
+msgstr "Ha fallat pa_context_set_sink_volume_by_index()"
 
-#~ msgid "Failed to read data from stream"
-#~ msgstr "Ha fallat la lectura del fluxe"
+#: ../src/sinkwidget.cc:67
+msgid "pa_context_set_sink_mute_by_index() failed"
+msgstr "Ha fallat pa_context_set_sink_mute_by_index()"
 
-#~ msgid "Peak detect"
-#~ msgstr "Detecta els pics"
+#: ../src/sinkwidget.cc:81
+msgid "pa_context_set_default_sink() failed"
+msgstr "Ha fallat pa_context_set_default_sink()"
 
-#~ msgid "Failed to create monitoring stream"
-#~ msgstr "Ha fallat la creació del fluxe de monitorització"
+#: ../src/sourceoutputwidget.cc:60
+msgid "pa_context_kill_source_output() failed"
+msgstr "Ha fallat pa_context_kill_source_output()"
 
-#~ msgid "Failed to connect monitoring stream"
-#~ msgstr "Ha fallat la connexió al fluxe de monitorització"
+#: ../src/sourceoutputwidget.cc:101
+msgid "pa_context_move_source_output_by_index() failed"
+msgstr "Ha fallat pa_context_move_source_output_by_index()"
 
-#~ msgid "System Sounds"
-#~ msgstr "Sons del sistema"
+#: ../src/sourcewidget.cc:31
+msgid "_Default"
+msgstr "Per _defecte"
+
+#: ../src/sourcewidget.cc:52
+msgid "pa_context_set_source_volume_by_index() failed"
+msgstr "Ha fallat pa_context_set_source_volume_by_index()"
+
+#: ../src/sourcewidget.cc:67
+msgid "pa_context_set_source_mute_by_index() failed"
+msgstr "Ha fallat pa_context_set_source_mute_by_index()"
+
+#: ../src/sourcewidget.cc:81
+msgid "pa_context_set_default_source() failed"
+msgstr "Ha fallat pa_context_set_default_source()"
