--- a/po/hu.po
+++ b/po/hu.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-10 02:55+0200\n"
+"POT-Creation-Date: 2009-06-17 03:51+0200\n"
 "PO-Revision-Date: 2009-03-22 12:59+0100\n"
 "Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
 "Language-Team: Hungarian <gnome@fsf.hu>\n"
@@ -238,75 +238,110 @@ msgstr "pa_context_get_sink_input_info_list() meghiúsult"
 msgid "pa_context_get_source_output_info_list() failed"
 msgstr "pa_context_get_source_output_info_list() meghiúsult"
 
-#: ../src/pavucontrol.cc:437 ../src/pavucontrol.cc:485
+#: ../src/pavucontrol.cc:437
 msgid "Connection failed"
 msgstr "A kapcsolatfelvétel nem sikerült"
 
-#~ msgid "Volume Control Feedback Sound"
-#~ msgstr "Hangerőszabályzó visszajelzési hang"
+#: ../src/cardwidget.cc:87
+msgid "pa_context_set_card_profile_by_index() failed"
+msgstr "pa_context_set_card_profile_by_index() meghiúsult"
 
-#~ msgid "pa_context_set_card_profile_by_index() failed"
-#~ msgstr "pa_context_set_card_profile_by_index() meghiúsult"
+#: ../src/channelwidget.cc:99
+msgid "Volume Control Feedback Sound"
+msgstr "Hangerőszabályzó visszajelzési hang"
 
-#~ msgid "pa_context_set_sink_volume_by_index() failed"
-#~ msgstr "pa_context_set_sink_volume_by_index() meghiúsult"
+#: ../src/channelwidget.cc:120
+msgid "<small>Silence</small>"
+msgstr ""
 
-#~ msgid "pa_context_set_sink_mute_by_index() failed"
-#~ msgstr "pa_context_set_sink_mute_by_index() meghiúsult"
+#: ../src/channelwidget.cc:121
+msgid "<small>Max</small>"
+msgstr ""
 
-#~ msgid "pa_context_set_default_sink() failed"
-#~ msgstr "pa_context_set_default_sink() meghiúsult"
+#: ../src/channelwidget.cc:125
+msgid "<small><i>Base</i></small>"
+msgstr ""
 
-#~ msgid "_Default"
-#~ msgstr "_Alapértelmezett"
+#: ../src/mainwindow.cc:238
+msgid "Failed to read data from stream"
+msgstr "Az adatok olvasása meghiúsult az adatfolyamból"
 
-#~ msgid "pa_context_set_source_volume_by_index() failed"
-#~ msgstr "pa_context_set_source_volume_by_index() meghiúsult"
+#: ../src/mainwindow.cc:273 ../src/mainwindow.cc:310
+msgid "Peak detect"
+msgstr "Csúcsérzékelés"
 
-#~ msgid "pa_context_set_source_mute_by_index() failed"
-#~ msgstr "pa_context_set_source_mute_by_index() meghiúsult"
+#: ../src/mainwindow.cc:274 ../src/mainwindow.cc:311
+msgid "Failed to create monitoring stream"
+msgstr "A megfigyelő adatfolyam létrehozása meghiúsult"
 
-#~ msgid "pa_context_set_default_source() failed"
-#~ msgstr "pa_context_set_default_source() meghiúsult"
+#: ../src/mainwindow.cc:282 ../src/mainwindow.cc:320
+msgid "Failed to connect monitoring stream"
+msgstr "A megfigyelő adatfolyam csatlakoztatása meghiúsult"
 
-#~ msgid "_Move Stream..."
-#~ msgstr "A_datfolyam mozgatása…"
+#: ../src/mainwindow.cc:566
+msgid "System Sounds"
+msgstr "Rendszerhangok"
 
-#~ msgid "_Terminate Stream"
-#~ msgstr "Adatfolyam be_fejeztetése…"
+#: ../src/rolewidget.cc:66
+msgid "pa_ext_stream_restore_write() failed"
+msgstr "pa_ext_stream_restore_write() meghiúsult"
 
-#~ msgid "pa_context_set_sink_input_volume() failed"
-#~ msgstr "pa_context_set_sink_input_volume() meghiúsult"
+#: ../src/sinkinputwidget.cc:34 ../src/sourceoutputwidget.cc:34
+msgid "_Move Stream..."
+msgstr "A_datfolyam mozgatása…"
 
-#~ msgid "pa_context_set_sink_input_mute() failed"
-#~ msgstr "pa_context_set_sink_input_mute() meghiúsult"
+#: ../src/sinkinputwidget.cc:35 ../src/sourceoutputwidget.cc:35
+msgid "_Terminate Stream"
+msgstr "Adatfolyam be_fejeztetése…"
 
-#~ msgid "pa_context_kill_sink_input() failed"
-#~ msgstr "pa_context_kill_sink_input() meghiúsult"
+#: ../src/sinkinputwidget.cc:61
+msgid "pa_context_set_sink_input_volume() failed"
+msgstr "pa_context_set_sink_input_volume() meghiúsult"
 
-#~ msgid "pa_context_move_sink_input_by_index() failed"
-#~ msgstr "pa_context_move_sink_input_by_index() meghiúsult"
+#: ../src/sinkinputwidget.cc:76
+msgid "pa_context_set_sink_input_mute() failed"
+msgstr "pa_context_set_sink_input_mute() meghiúsult"
 
-#~ msgid "pa_context_kill_source_output() failed"
-#~ msgstr "pa_context_kill_source_output() meghiúsult"
+#: ../src/sinkinputwidget.cc:110
+msgid "pa_context_kill_sink_input() failed"
+msgstr "pa_context_kill_sink_input() meghiúsult"
 
-#~ msgid "pa_context_move_source_output_by_index() failed"
-#~ msgstr "pa_context_move_source_output_by_index() meghiúsult"
+#: ../src/sinkinputwidget.cc:127
+msgid "pa_context_move_sink_input_by_index() failed"
+msgstr "pa_context_move_sink_input_by_index() meghiúsult"
 
-#~ msgid "pa_ext_stream_restore_write() failed"
-#~ msgstr "pa_ext_stream_restore_write() meghiúsult"
+#: ../src/sinkwidget.cc:52
+msgid "pa_context_set_sink_volume_by_index() failed"
+msgstr "pa_context_set_sink_volume_by_index() meghiúsult"
 
-#~ msgid "Failed to read data from stream"
-#~ msgstr "Az adatok olvasása meghiúsult az adatfolyamból"
+#: ../src/sinkwidget.cc:67
+msgid "pa_context_set_sink_mute_by_index() failed"
+msgstr "pa_context_set_sink_mute_by_index() meghiúsult"
 
-#~ msgid "Peak detect"
-#~ msgstr "Csúcsérzékelés"
+#: ../src/sinkwidget.cc:81
+msgid "pa_context_set_default_sink() failed"
+msgstr "pa_context_set_default_sink() meghiúsult"
 
-#~ msgid "Failed to create monitoring stream"
-#~ msgstr "A megfigyelő adatfolyam létrehozása meghiúsult"
+#: ../src/sourceoutputwidget.cc:60
+msgid "pa_context_kill_source_output() failed"
+msgstr "pa_context_kill_source_output() meghiúsult"
 
-#~ msgid "Failed to connect monitoring stream"
-#~ msgstr "A megfigyelő adatfolyam csatlakoztatása meghiúsult"
+#: ../src/sourceoutputwidget.cc:101
+msgid "pa_context_move_source_output_by_index() failed"
+msgstr "pa_context_move_source_output_by_index() meghiúsult"
 
-#~ msgid "System Sounds"
-#~ msgstr "Rendszerhangok"
+#: ../src/sourcewidget.cc:31
+msgid "_Default"
+msgstr "_Alapértelmezett"
+
+#: ../src/sourcewidget.cc:52
+msgid "pa_context_set_source_volume_by_index() failed"
+msgstr "pa_context_set_source_volume_by_index() meghiúsult"
+
+#: ../src/sourcewidget.cc:67
+msgid "pa_context_set_source_mute_by_index() failed"
+msgstr "pa_context_set_source_mute_by_index() meghiúsult"
+
+#: ../src/sourcewidget.cc:81
+msgid "pa_context_set_default_source() failed"
+msgstr "pa_context_set_default_source() meghiúsult"
