--- a/po/sv.po
+++ b/po/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pavucontrol\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-10 02:55+0200\n"
+"POT-Creation-Date: 2009-06-17 03:51+0200\n"
 "PO-Revision-Date: 2008-09-05 18:07+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -240,72 +240,111 @@ msgstr "pa_context_get_sink_input_info_list() misslyckades"
 msgid "pa_context_get_source_output_info_list() failed"
 msgstr "pa_context_get_source_output_info_list() misslyckades"
 
-#: ../src/pavucontrol.cc:437 ../src/pavucontrol.cc:485
+#: ../src/pavucontrol.cc:437
 msgid "Connection failed"
 msgstr "Anslutning misslyckades"
 
-#~ msgid "Volume Control Feedback Sound"
-#~ msgstr "Återkopplingsljud för volymkontroll"
+#: ../src/cardwidget.cc:87
+#, fuzzy
+msgid "pa_context_set_card_profile_by_index() failed"
+msgstr "pa_context_get_source_info_by_index() misslyckades"
 
-#~ msgid "pa_context_set_sink_volume_by_index() failed"
-#~ msgstr "pa_context_set_sink_volume_by_index() misslyckades"
+#: ../src/channelwidget.cc:99
+msgid "Volume Control Feedback Sound"
+msgstr "Återkopplingsljud för volymkontroll"
 
-#~ msgid "pa_context_set_sink_mute_by_index() failed"
-#~ msgstr "pa_context_set_sink_mute_by_index() misslyckades"
+#: ../src/channelwidget.cc:120
+msgid "<small>Silence</small>"
+msgstr ""
 
-#~ msgid "pa_context_set_default_sink() failed"
-#~ msgstr "pa_context_set_default_sink() misslyckades"
+#: ../src/channelwidget.cc:121
+msgid "<small>Max</small>"
+msgstr ""
 
-#~ msgid "_Default"
-#~ msgstr "_Standard"
+#: ../src/channelwidget.cc:125
+msgid "<small><i>Base</i></small>"
+msgstr ""
 
-#~ msgid "pa_context_set_source_volume_by_index() failed"
-#~ msgstr "pa_context_set_source_volume_by_index() misslyckades"
+#: ../src/mainwindow.cc:238
+msgid "Failed to read data from stream"
+msgstr "Misslyckades med att läsa data från ström"
 
-#~ msgid "pa_context_set_source_mute_by_index() failed"
-#~ msgstr "pa_context_set_source_mute_by_index() misslyckades"
+#: ../src/mainwindow.cc:273 ../src/mainwindow.cc:310
+msgid "Peak detect"
+msgstr "Topp upptäcktes"
 
-#~ msgid "pa_context_set_default_source() failed"
-#~ msgstr "pa_context_set_default_source() misslyckades"
+#: ../src/mainwindow.cc:274 ../src/mainwindow.cc:311
+msgid "Failed to create monitoring stream"
+msgstr "Misslyckades med att skapa övervakningsström"
 
-#~ msgid "_Move Stream..."
-#~ msgstr "_Flytta ström..."
+#: ../src/mainwindow.cc:282 ../src/mainwindow.cc:320
+msgid "Failed to connect monitoring stream"
+msgstr "Misslyckades med att ansluta övervakningsström"
 
-#~ msgid "_Terminate Stream"
-#~ msgstr "_Terminera ström"
+#: ../src/mainwindow.cc:566
+msgid "System Sounds"
+msgstr "Systemljud"
 
-#~ msgid "pa_context_set_sink_input_volume() failed"
-#~ msgstr "pa_context_set_sink_input_volume() misslyckades"
+#: ../src/rolewidget.cc:66
+msgid "pa_ext_stream_restore_write() failed"
+msgstr "pa_ext_stream_restore_write() misslyckades"
 
-#~ msgid "pa_context_set_sink_input_mute() failed"
-#~ msgstr "pa_context_set_sink_input_mute() misslyckades"
+#: ../src/sinkinputwidget.cc:34 ../src/sourceoutputwidget.cc:34
+msgid "_Move Stream..."
+msgstr "_Flytta ström..."
 
-#~ msgid "pa_context_kill_sink_input() failed"
-#~ msgstr "pa_context_kill_sink_input() misslyckades"
+#: ../src/sinkinputwidget.cc:35 ../src/sourceoutputwidget.cc:35
+msgid "_Terminate Stream"
+msgstr "_Terminera ström"
 
-#~ msgid "pa_context_move_sink_input_by_index() failed"
-#~ msgstr "pa_context_move_sink_input_by_index() misslyckades"
+#: ../src/sinkinputwidget.cc:61
+msgid "pa_context_set_sink_input_volume() failed"
+msgstr "pa_context_set_sink_input_volume() misslyckades"
 
-#~ msgid "pa_context_kill_source_output() failed"
-#~ msgstr "pa_context_kill_source_output() misslyckades"
+#: ../src/sinkinputwidget.cc:76
+msgid "pa_context_set_sink_input_mute() failed"
+msgstr "pa_context_set_sink_input_mute() misslyckades"
 
-#~ msgid "pa_context_move_source_output_by_index() failed"
-#~ msgstr "pa_context_move_source_output_by_index() misslyckades"
+#: ../src/sinkinputwidget.cc:110
+msgid "pa_context_kill_sink_input() failed"
+msgstr "pa_context_kill_sink_input() misslyckades"
 
-#~ msgid "pa_ext_stream_restore_write() failed"
-#~ msgstr "pa_ext_stream_restore_write() misslyckades"
+#: ../src/sinkinputwidget.cc:127
+msgid "pa_context_move_sink_input_by_index() failed"
+msgstr "pa_context_move_sink_input_by_index() misslyckades"
 
-#~ msgid "Failed to read data from stream"
-#~ msgstr "Misslyckades med att läsa data från ström"
+#: ../src/sinkwidget.cc:52
+msgid "pa_context_set_sink_volume_by_index() failed"
+msgstr "pa_context_set_sink_volume_by_index() misslyckades"
 
-#~ msgid "Peak detect"
-#~ msgstr "Topp upptäcktes"
+#: ../src/sinkwidget.cc:67
+msgid "pa_context_set_sink_mute_by_index() failed"
+msgstr "pa_context_set_sink_mute_by_index() misslyckades"
 
-#~ msgid "Failed to create monitoring stream"
-#~ msgstr "Misslyckades med att skapa övervakningsström"
+#: ../src/sinkwidget.cc:81
+msgid "pa_context_set_default_sink() failed"
+msgstr "pa_context_set_default_sink() misslyckades"
 
-#~ msgid "Failed to connect monitoring stream"
-#~ msgstr "Misslyckades med att ansluta övervakningsström"
+#: ../src/sourceoutputwidget.cc:60
+msgid "pa_context_kill_source_output() failed"
+msgstr "pa_context_kill_source_output() misslyckades"
 
-#~ msgid "System Sounds"
-#~ msgstr "Systemljud"
+#: ../src/sourceoutputwidget.cc:101
+msgid "pa_context_move_source_output_by_index() failed"
+msgstr "pa_context_move_source_output_by_index() misslyckades"
+
+#: ../src/sourcewidget.cc:31
+msgid "_Default"
+msgstr "_Standard"
+
+#: ../src/sourcewidget.cc:52
+msgid "pa_context_set_source_volume_by_index() failed"
+msgstr "pa_context_set_source_volume_by_index() misslyckades"
+
+#: ../src/sourcewidget.cc:67
+msgid "pa_context_set_source_mute_by_index() failed"
+msgstr "pa_context_set_source_mute_by_index() misslyckades"
+
+#: ../src/sourcewidget.cc:81
+msgid "pa_context_set_default_source() failed"
+msgstr "pa_context_set_default_source() misslyckades"
