--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pavucontrol trunk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-10 02:55+0200\n"
+"POT-Creation-Date: 2009-06-17 03:51+0200\n"
 "PO-Revision-Date: 2008-09-22 01:14+0200\n"
 "Last-Translator: Ozan Çağlayan <ozan@pardus.org.tr>\n"
 "Language-Team: Turkish <tr@li.org>\n"
@@ -241,72 +241,111 @@ msgstr "pa_context_get_sink_input_info_list() hatası"
 msgid "pa_context_get_source_output_info_list() failed"
 msgstr "pa_context_get_source_output_info_list() hatası"
 
-#: ../src/pavucontrol.cc:437 ../src/pavucontrol.cc:485
+#: ../src/pavucontrol.cc:437
 msgid "Connection failed"
 msgstr "Bağlantı başarısız"
 
-#~ msgid "Volume Control Feedback Sound"
-#~ msgstr "Ses Şiddeti Denetimi Geri Besleme Sesi"
+#: ../src/cardwidget.cc:87
+#, fuzzy
+msgid "pa_context_set_card_profile_by_index() failed"
+msgstr "pa_context_get_source_info_by_index() hatası"
 
-#~ msgid "pa_context_set_sink_volume_by_index() failed"
-#~ msgstr "pa_context_set_sink_volume_by_index() hatası"
+#: ../src/channelwidget.cc:99
+msgid "Volume Control Feedback Sound"
+msgstr "Ses Şiddeti Denetimi Geri Besleme Sesi"
 
-#~ msgid "pa_context_set_sink_mute_by_index() failed"
-#~ msgstr "pa_context_set_sink_mute_by_index() hatası"
+#: ../src/channelwidget.cc:120
+msgid "<small>Silence</small>"
+msgstr ""
 
-#~ msgid "pa_context_set_default_sink() failed"
-#~ msgstr "pa_context_set_default_sink() hatası"
+#: ../src/channelwidget.cc:121
+msgid "<small>Max</small>"
+msgstr ""
 
-#~ msgid "_Default"
-#~ msgstr "Ön_tanımlı"
+#: ../src/channelwidget.cc:125
+msgid "<small><i>Base</i></small>"
+msgstr ""
 
-#~ msgid "pa_context_set_source_volume_by_index() failed"
-#~ msgstr "pa_context_set_source_volume_by_index() hatası"
+#: ../src/mainwindow.cc:238
+msgid "Failed to read data from stream"
+msgstr "Ses akışından veri okunamıyor"
 
-#~ msgid "pa_context_set_source_mute_by_index() failed"
-#~ msgstr "pa_context_set_source_mute_by_index() hatası"
+#: ../src/mainwindow.cc:273 ../src/mainwindow.cc:310
+msgid "Peak detect"
+msgstr "Tepe noktası tespiti"
 
-#~ msgid "pa_context_set_default_source() failed"
-#~ msgstr "pa_context_set_default_source() hatası"
+#: ../src/mainwindow.cc:274 ../src/mainwindow.cc:311
+msgid "Failed to create monitoring stream"
+msgstr "Monitör akışı yaratılamadı"
 
-#~ msgid "_Move Stream..."
-#~ msgstr "Ses Akışını _Taşı..."
+#: ../src/mainwindow.cc:282 ../src/mainwindow.cc:320
+msgid "Failed to connect monitoring stream"
+msgstr "Monitör akışına bağlanılamadı"
 
-#~ msgid "_Terminate Stream"
-#~ msgstr "Ses Akışını _Sonlandır..."
+#: ../src/mainwindow.cc:566
+msgid "System Sounds"
+msgstr "Sistem Sesleri"
 
-#~ msgid "pa_context_set_sink_input_volume() failed"
-#~ msgstr "pa_context_set_sink_input_volume() hatası"
+#: ../src/rolewidget.cc:66
+msgid "pa_ext_stream_restore_write() failed"
+msgstr "pa_ext_stream_restore_write() hatası"
 
-#~ msgid "pa_context_set_sink_input_mute() failed"
-#~ msgstr "pa_context_set_sink_input_mute() hatası"
+#: ../src/sinkinputwidget.cc:34 ../src/sourceoutputwidget.cc:34
+msgid "_Move Stream..."
+msgstr "Ses Akışını _Taşı..."
 
-#~ msgid "pa_context_kill_sink_input() failed"
-#~ msgstr "pa_context_kill_sink_input() hatası"
+#: ../src/sinkinputwidget.cc:35 ../src/sourceoutputwidget.cc:35
+msgid "_Terminate Stream"
+msgstr "Ses Akışını _Sonlandır..."
 
-#~ msgid "pa_context_move_sink_input_by_index() failed"
-#~ msgstr "pa_context_move_sink_input_by_index() hatası"
+#: ../src/sinkinputwidget.cc:61
+msgid "pa_context_set_sink_input_volume() failed"
+msgstr "pa_context_set_sink_input_volume() hatası"
 
-#~ msgid "pa_context_kill_source_output() failed"
-#~ msgstr "pa_context_kill_source_output() hatası"
+#: ../src/sinkinputwidget.cc:76
+msgid "pa_context_set_sink_input_mute() failed"
+msgstr "pa_context_set_sink_input_mute() hatası"
 
-#~ msgid "pa_context_move_source_output_by_index() failed"
-#~ msgstr "pa_context_move_source_output_by_index() hatası"
+#: ../src/sinkinputwidget.cc:110
+msgid "pa_context_kill_sink_input() failed"
+msgstr "pa_context_kill_sink_input() hatası"
 
-#~ msgid "pa_ext_stream_restore_write() failed"
-#~ msgstr "pa_ext_stream_restore_write() hatası"
+#: ../src/sinkinputwidget.cc:127
+msgid "pa_context_move_sink_input_by_index() failed"
+msgstr "pa_context_move_sink_input_by_index() hatası"
 
-#~ msgid "Failed to read data from stream"
-#~ msgstr "Ses akışından veri okunamıyor"
+#: ../src/sinkwidget.cc:52
+msgid "pa_context_set_sink_volume_by_index() failed"
+msgstr "pa_context_set_sink_volume_by_index() hatası"
 
-#~ msgid "Peak detect"
-#~ msgstr "Tepe noktası tespiti"
+#: ../src/sinkwidget.cc:67
+msgid "pa_context_set_sink_mute_by_index() failed"
+msgstr "pa_context_set_sink_mute_by_index() hatası"
 
-#~ msgid "Failed to create monitoring stream"
-#~ msgstr "Monitör akışı yaratılamadı"
+#: ../src/sinkwidget.cc:81
+msgid "pa_context_set_default_sink() failed"
+msgstr "pa_context_set_default_sink() hatası"
 
-#~ msgid "Failed to connect monitoring stream"
-#~ msgstr "Monitör akışına bağlanılamadı"
+#: ../src/sourceoutputwidget.cc:60
+msgid "pa_context_kill_source_output() failed"
+msgstr "pa_context_kill_source_output() hatası"
 
-#~ msgid "System Sounds"
-#~ msgstr "Sistem Sesleri"
+#: ../src/sourceoutputwidget.cc:101
+msgid "pa_context_move_source_output_by_index() failed"
+msgstr "pa_context_move_source_output_by_index() hatası"
+
+#: ../src/sourcewidget.cc:31
+msgid "_Default"
+msgstr "Ön_tanımlı"
+
+#: ../src/sourcewidget.cc:52
+msgid "pa_context_set_source_volume_by_index() failed"
+msgstr "pa_context_set_source_volume_by_index() hatası"
+
+#: ../src/sourcewidget.cc:67
+msgid "pa_context_set_source_mute_by_index() failed"
+msgstr "pa_context_set_source_mute_by_index() hatası"
+
+#: ../src/sourcewidget.cc:81
+msgid "pa_context_set_default_source() failed"
+msgstr "pa_context_set_default_source() hatası"
