--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pavucontrol.master-tx\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-10 02:55+0200\n"
+"POT-Creation-Date: 2009-06-17 03:51+0200\n"
 "PO-Revision-Date: 2009-04-01 21:43+1000\n"
 "Last-Translator: Leah Liu <lliu@redhat.com>\n"
 "Language-Team: Simplified Chinese <zh@li.org>\n"
@@ -238,75 +238,110 @@ msgstr "pa_context_get_sink_input_info_list() 失败"
 msgid "pa_context_get_source_output_info_list() failed"
 msgstr "pa_context_get_source_output_info_list() 失败"
 
-#: ../src/pavucontrol.cc:437 ../src/pavucontrol.cc:485
+#: ../src/pavucontrol.cc:437
 msgid "Connection failed"
 msgstr "连接失败"
 
-#~ msgid "Volume Control Feedback Sound"
-#~ msgstr "音量控制反馈声音"
+#: ../src/cardwidget.cc:87
+msgid "pa_context_set_card_profile_by_index() failed"
+msgstr "pa_context_set_card_profile_by_index() failed"
 
-#~ msgid "pa_context_set_card_profile_by_index() failed"
-#~ msgstr "pa_context_set_card_profile_by_index() failed"
+#: ../src/channelwidget.cc:99
+msgid "Volume Control Feedback Sound"
+msgstr "音量控制反馈声音"
 
-#~ msgid "pa_context_set_sink_volume_by_index() failed"
-#~ msgstr "pa_context_set_sink_volume_by_index() 失败"
+#: ../src/channelwidget.cc:120
+msgid "<small>Silence</small>"
+msgstr ""
 
-#~ msgid "pa_context_set_sink_mute_by_index() failed"
-#~ msgstr "pa_context_set_sink_mute_by_index() 失败"
+#: ../src/channelwidget.cc:121
+msgid "<small>Max</small>"
+msgstr ""
 
-#~ msgid "pa_context_set_default_sink() failed"
-#~ msgstr "pa_context_set_default_sink() 失败"
+#: ../src/channelwidget.cc:125
+msgid "<small><i>Base</i></small>"
+msgstr ""
 
-#~ msgid "_Default"
-#~ msgstr "默认(_D)"
+#: ../src/mainwindow.cc:238
+msgid "Failed to read data from stream"
+msgstr "无法从流媒体中读取数据"
 
-#~ msgid "pa_context_set_source_volume_by_index() failed"
-#~ msgstr "pa_context_set_source_volume_by_index() 失败"
+#: ../src/mainwindow.cc:273 ../src/mainwindow.cc:310
+msgid "Peak detect"
+msgstr "尖峰探测"
 
-#~ msgid "pa_context_set_source_mute_by_index() failed"
-#~ msgstr "pa_context_set_source_mute_by_index() 失败"
+#: ../src/mainwindow.cc:274 ../src/mainwindow.cc:311
+msgid "Failed to create monitoring stream"
+msgstr "无法常见监视流媒体"
 
-#~ msgid "pa_context_set_default_source() failed"
-#~ msgstr "pa_context_set_default_source() 失败"
+#: ../src/mainwindow.cc:282 ../src/mainwindow.cc:320
+msgid "Failed to connect monitoring stream"
+msgstr "无法连接到监视流媒体"
 
-#~ msgid "_Move Stream..."
-#~ msgstr "移动流媒体(_M)..."
+#: ../src/mainwindow.cc:566
+msgid "System Sounds"
+msgstr "系统声音"
 
-#~ msgid "_Terminate Stream"
-#~ msgstr "结束流媒体(_T)"
+#: ../src/rolewidget.cc:66
+msgid "pa_ext_stream_restore_write() failed"
+msgstr "pa_ext_stream_restore_write() 失败"
 
-#~ msgid "pa_context_set_sink_input_volume() failed"
-#~ msgstr "pa_context_set_sink_input_volume() 失败"
+#: ../src/sinkinputwidget.cc:34 ../src/sourceoutputwidget.cc:34
+msgid "_Move Stream..."
+msgstr "移动流媒体(_M)..."
 
-#~ msgid "pa_context_set_sink_input_mute() failed"
-#~ msgstr "pa_context_set_sink_input_mute() 失败"
+#: ../src/sinkinputwidget.cc:35 ../src/sourceoutputwidget.cc:35
+msgid "_Terminate Stream"
+msgstr "结束流媒体(_T)"
 
-#~ msgid "pa_context_kill_sink_input() failed"
-#~ msgstr "pa_context_kill_sink_input() 失败"
+#: ../src/sinkinputwidget.cc:61
+msgid "pa_context_set_sink_input_volume() failed"
+msgstr "pa_context_set_sink_input_volume() 失败"
 
-#~ msgid "pa_context_move_sink_input_by_index() failed"
-#~ msgstr "pa_context_move_sink_input_by_index() 失败"
+#: ../src/sinkinputwidget.cc:76
+msgid "pa_context_set_sink_input_mute() failed"
+msgstr "pa_context_set_sink_input_mute() 失败"
 
-#~ msgid "pa_context_kill_source_output() failed"
-#~ msgstr "pa_context_kill_source_output() 失败"
+#: ../src/sinkinputwidget.cc:110
+msgid "pa_context_kill_sink_input() failed"
+msgstr "pa_context_kill_sink_input() 失败"
 
-#~ msgid "pa_context_move_source_output_by_index() failed"
-#~ msgstr "pa_context_move_source_output_by_index() 失败"
+#: ../src/sinkinputwidget.cc:127
+msgid "pa_context_move_sink_input_by_index() failed"
+msgstr "pa_context_move_sink_input_by_index() 失败"
 
-#~ msgid "pa_ext_stream_restore_write() failed"
-#~ msgstr "pa_ext_stream_restore_write() 失败"
+#: ../src/sinkwidget.cc:52
+msgid "pa_context_set_sink_volume_by_index() failed"
+msgstr "pa_context_set_sink_volume_by_index() 失败"
 
-#~ msgid "Failed to read data from stream"
-#~ msgstr "无法从流媒体中读取数据"
+#: ../src/sinkwidget.cc:67
+msgid "pa_context_set_sink_mute_by_index() failed"
+msgstr "pa_context_set_sink_mute_by_index() 失败"
 
-#~ msgid "Peak detect"
-#~ msgstr "尖峰探测"
+#: ../src/sinkwidget.cc:81
+msgid "pa_context_set_default_sink() failed"
+msgstr "pa_context_set_default_sink() 失败"
 
-#~ msgid "Failed to create monitoring stream"
-#~ msgstr "无法常见监视流媒体"
+#: ../src/sourceoutputwidget.cc:60
+msgid "pa_context_kill_source_output() failed"
+msgstr "pa_context_kill_source_output() 失败"
 
-#~ msgid "Failed to connect monitoring stream"
-#~ msgstr "无法连接到监视流媒体"
+#: ../src/sourceoutputwidget.cc:101
+msgid "pa_context_move_source_output_by_index() failed"
+msgstr "pa_context_move_source_output_by_index() 失败"
 
-#~ msgid "System Sounds"
-#~ msgstr "系统声音"
+#: ../src/sourcewidget.cc:31
+msgid "_Default"
+msgstr "默认(_D)"
+
+#: ../src/sourcewidget.cc:52
+msgid "pa_context_set_source_volume_by_index() failed"
+msgstr "pa_context_set_source_volume_by_index() 失败"
+
+#: ../src/sourcewidget.cc:67
+msgid "pa_context_set_source_mute_by_index() failed"
+msgstr "pa_context_set_source_mute_by_index() 失败"
+
+#: ../src/sourcewidget.cc:81
+msgid "pa_context_set_default_source() failed"
+msgstr "pa_context_set_default_source() 失败"
